[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maybe_static = "0.1"
rusty_jsc = { path = "../rusty_jsc" }
rusty_jsc_macros = { path = "../rusty_jsc/macros" }
rusty_jsc_sys = { path = "../rusty_jsc/sys" }
tokio = { version = "*", features = ["full"] }
libc = "*"